--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -8,7 +8,7 @@ license     = "GPL-3.0"
 name        = "pangolin-runtime"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-common/"
-version     = "1.0.0"
+version     = "1.1.0"
 
 [dependencies]
 # crates
@@ -41,7 +41,6 @@ sp-api                            = { default-features = false, git = "https://g
 sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-io                             = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
@@ -50,7 +49,7 @@ sp-transaction-pool               = { default-features = false, git = "https://g
 sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [build-dependencies]
-substrate-wasm-builder = "3.0.0"
+substrate-wasm-builder = { version = "3.0.0" }
 
 [features]
 default = ["std"]
@@ -85,7 +84,6 @@ std     = [
 	"sp-block-builder/std",
 	"sp-core/std",
 	"sp-inherents/std",
-	"sp-io/std",
 	"sp-offchain/std",
 	"sp-runtime/std",
 	"sp-session/std",
