--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,37 +26,43 @@ pangolin-primitives = { path = "primitives" }
 pangolin-runtime    = { package = "pangolin-runtime", path = "runtime" }
 
 # Substrate dependencies
-sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-cli              = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-rpc              = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-service          = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-tracing          = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-block-builder    = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core             = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-inherents        = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-trie             = { git = "https://github.com/paritytech/substrate", branch = "master" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-cli              = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-rpc              = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-service          = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-tracing          = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-block-builder    = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-core             = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-inherents        = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-trie             = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 
 # RPC related dependencies
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
-cumulus-consensus  = { git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-network    = { git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-service    = { git = "https://github.com/paritytech/cumulus", branch = "master" }
+cumulus-consensus  = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-network    = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-service    = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 
 # Polkadot dependencies
-polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "master" }
-polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "master" }
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
-polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "master" }
+polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+
+[workspace]
+members = [
+	"primitives",
+	"runtime",
+]
