--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -15,38 +15,38 @@ version     = "1.1.0"
 codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive"] }
 serde = { version = "1.0.118", optional = true, features = ["derive"] }
 # cumulus
-cumulus-message-broker    = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-parachain-upgrade = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-primitives        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
-cumulus-runtime           = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
-parachain-info            = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
-xcm-handler               = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "master" }
+cumulus-message-broker    = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-parachain-upgrade = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives        = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-runtime           = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+parachain-info            = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+xcm-handler               = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # darwinia
 pangolin-primitives = { default-features = false, path = "../primitives" }
 # polkadot
-polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "master" }
-xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "master" }
-xcm-builder        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "master" }
-xcm-executor       = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "master" }
+polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+xcm-builder        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
+xcm-executor       = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 # substrate
-frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
-sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-api                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-block-builder                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-core                           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-inherents                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "3.0.0" }
