--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -5,7 +5,7 @@ description = "Darwinia Runtime Module Library Runtime"
 edition     = "2018"
 homepage    = "https://darwinia.network/"
 license     = "GPL-3.0"
-name        = "pangolin-runtime"
+name        = "darwinia-pc2-runtime"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-common/"
 version     = "1.1.0"
@@ -22,7 +22,7 @@ cumulus-runtime           = { default-features = false, git = "https://github.co
 parachain-info            = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 xcm-handler               = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # darwinia
-pangolin-primitives = { default-features = false, path = "../primitives" }
+darwinia-pc2-primitives = { default-features = false, path = "../primitives" }
 # polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
@@ -65,7 +65,7 @@ std     = [
 	"parachain-info/std",
 	"xcm-handler/std",
 	# darwinia
-	"pangolin-primitives/std",
+	"darwinia-pc2-primitives/std",
 	# polkadot
 	"polkadot-parachain/std",
 	"xcm/std",
