--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,10 +47,10 @@ sp-trie             = { git = "https://github.com/paritytech/substrate", branch 
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
-cumulus-consensus  = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-network    = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-primitives = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-service    = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-consensus = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-network   = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-service   = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives-core  = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 
 # Polkadot dependencies
 polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
