--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -15,11 +15,10 @@ version     = "1.1.0"
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
 serde = { version = "1.0.123", optional = true, features = ["derive"] }
 # cumulus
-cumulus-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-primitives       = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-cumulus-runtime          = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-parachain-info           = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-xcm-handler              = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-pallet-xcm-handler      = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # darwinia
 darwinia-pc2-primitives = { default-features = false, path = "../primitives" }
 # polkadot
@@ -57,11 +56,10 @@ std     = [
 	"codec/std",
 	"serde",
 	# cumulus
-	"cumulus-parachain-system/std",
-	"cumulus-primitives/std",
-	"cumulus-runtime/std",
+	"cumulus-pallet-parachain-system/std",
+	"cumulus-pallet-xcm-handler/std",
+	"cumulus-primitives-core/std",
 	"parachain-info/std",
-	"xcm-handler/std",
 	# darwinia
 	"darwinia-pc2-primitives/std",
 	# polkadot
