--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,12 @@ name = "drml"
 path = "src/main.rs"
 
 [dependencies]
-array-bytes = { version = "0.3.0" }
+array-bytes = { version = "1.1.0" }
 codec       = { package = "parity-scale-codec", version = "2.0.0" }
 log         = { version = "0.4.14" }
-serde       = { version = "1.0.123", features = ["derive"] }
+serde       = { version = "1.0.124", features = ["derive"] }
 structopt   = { version = "0.3.21" }
+tempfile    = { version = "3.2.0" }
 
 # Parachain dependencies
 darwinia-pc2-primitives = { path = "primitives" }
@@ -47,6 +48,7 @@ sp-trie             = { git = "https://github.com/paritytech/substrate", branch 
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
+cumulus-cli                          = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-network               = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-service               = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
