--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -13,7 +13,7 @@ version     = "1.2.0"
 [dependencies]
 # crates
 codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
-serde = { version = "1.0.123", optional = true, features = ["derive"] }
+serde = { version = "1.0.124", optional = true, features = ["derive"] }
 # cumulus
 cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-pallet-xcm-handler      = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
@@ -52,22 +52,22 @@ substrate-wasm-builder = { version = "3.0.0" }
 [features]
 default = ["std"]
 std     = [
-	# crates
+
 	"codec/std",
 	"serde",
-	# cumulus
+
 	"cumulus-pallet-parachain-system/std",
 	"cumulus-pallet-xcm-handler/std",
 	"cumulus-primitives-core/std",
 	"parachain-info/std",
-	# darwinia
+
 	"darwinia-pc2-primitives/std",
-	# polkadot
+
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
-	# substrate
+
 	"frame-executive/std",
 	"frame-support/std",
 	"frame-system/std",
@@ -86,4 +86,4 @@ std     = [
 	"sp-std/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
-]
+] # substrate
