--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -42,6 +42,7 @@ sp-inherents                      = { default-features = false, git = "https://g
 sp-offchain                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-runtime                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-session                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+sp-staking                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-std                            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-transaction-pool               = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 sp-version                        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
@@ -52,22 +53,17 @@ substrate-wasm-builder = { version = "3.0.0" }
 [features]
 default = ["std"]
 std     = [
-
 	"codec/std",
 	"serde",
-
 	"cumulus-pallet-parachain-system/std",
 	"cumulus-pallet-xcm-handler/std",
 	"cumulus-primitives-core/std",
 	"parachain-info/std",
-
 	"darwinia-pc2-primitives/std",
-
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
 	"xcm-executor/std",
-
 	"frame-executive/std",
 	"frame-support/std",
 	"frame-system/std",
@@ -83,6 +79,7 @@ std     = [
 	"sp-offchain/std",
 	"sp-runtime/std",
 	"sp-session/std",
+	"sp-staking/std",
 	"sp-std/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
