--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,7 +20,10 @@ cumulus-pallet-xcm-handler      = { default-features = false, git = "https://git
 cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # darwinia
+darwinia-balances       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-header-mmr     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-pc2-primitives = { default-features = false, path = "../primitives" }
+darwinia-support        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 # polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
@@ -59,7 +62,10 @@ std     = [
 	"cumulus-pallet-xcm-handler/std",
 	"cumulus-primitives-core/std",
 	"parachain-info/std",
+	"darwinia-balances/std",
+	"darwinia-header-mmr/std",
 	"darwinia-pc2-primitives/std",
+	"darwinia-support/std",
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
@@ -83,4 +89,4 @@ std     = [
 	"sp-std/std",
 	"sp-transaction-pool/std",
 	"sp-version/std",
-] # substrate
+]
