--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,10 +20,12 @@ cumulus-pallet-xcm-handler      = { default-features = false, git = "https://git
 cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # darwinia
-darwinia-balances       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-header-mmr     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-pc2-primitives = { default-features = false, path = "../primitives" }
-darwinia-support        = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-balances           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-elections-phragmen = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-header-mmr         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-pc2-primitives     = { default-features = false, path = "../primitives" }
+darwinia-support            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-treasury           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 # polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
@@ -63,9 +65,11 @@ std     = [
 	"cumulus-primitives-core/std",
 	"parachain-info/std",
 	"darwinia-balances/std",
+	"darwinia-elections-phragmen/std",
 	"darwinia-header-mmr/std",
 	"darwinia-pc2-primitives/std",
 	"darwinia-support/std",
+	"darwinia-treasury/std",
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
