--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,33 +11,38 @@ repository  = "https://github.com/darwinia-network/darwinia-common/"
 version     = "1.2.0"
 
 [dependencies]
-# crates
+# Crates
 codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.124", optional = true, features = ["derive"] }
-# cumulus
+# Cumulus
 cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-pallet-xcm-handler      = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-# darwinia
+# Darwinia
 darwinia-balances           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-democracy          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-elections-phragmen = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-ethereum-relay     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-header-mmr         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-pc2-primitives     = { default-features = false, path = "../primitives" }
+darwinia-relay-primitives   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-relayer-game       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-support            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
 darwinia-treasury           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-# polkadot
+ethereum-primitives         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+# Polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm-builder        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm-executor       = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
-# substrate
+# Substrate
 frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-collective                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-identity                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-membership                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-proxy                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-scheduler                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
@@ -72,10 +77,14 @@ std     = [
 	"darwinia-balances/std",
 	"darwinia-democracy/std",
 	"darwinia-elections-phragmen/std",
+	"darwinia-ethereum-relay/std",
 	"darwinia-header-mmr/std",
 	"darwinia-pc2-primitives/std",
+	"darwinia-relay-primitives/std",
+	"darwinia-relayer-game/std",
 	"darwinia-support/std",
 	"darwinia-treasury/std",
+	"ethereum-primitives/std",
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
@@ -85,6 +94,7 @@ std     = [
 	"frame-system/std",
 	"pallet-collective/std",
 	"pallet-identity/std",
+	"pallet-membership/std",
 	"pallet-proxy/std",
 	"pallet-randomness-collective-flip/std",
 	"pallet-scheduler/std",
