--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -43,6 +43,7 @@ frame-system                      = { default-features = false, git = "https://g
 pallet-collective                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-identity                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-membership                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-multisig                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-proxy                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-scheduler                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
@@ -95,6 +96,7 @@ std     = [
 	"pallet-collective/std",
 	"pallet-identity/std",
 	"pallet-membership/std",
+	"pallet-multisig/std",
 	"pallet-proxy/std",
 	"pallet-randomness-collective-flip/std",
 	"pallet-scheduler/std",
