--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ sp-trie             = { git = "https://github.com/paritytech/substrate", branch 
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
-cumulus-cli                          = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
+cumulus-client-cli                   = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-network               = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-client-service               = { git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
