--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,19 +20,19 @@ cumulus-pallet-xcm-handler      = { default-features = false, git = "https://git
 cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 # Darwinia
-darwinia-balances           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-democracy          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-elections-phragmen = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-ethereum-backing   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-ethereum-relay     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-header-mmr         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-balances           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-democracy          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-elections-phragmen = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-ethereum-backing   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-ethereum-relay     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-header-mmr         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
 darwinia-pc2-primitives     = { default-features = false, path = "../primitives" }
-darwinia-relay-authorities  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-relay-primitives   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-relayer-game       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-support            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-darwinia-treasury           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
-ethereum-primitives         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1" }
+darwinia-relay-authorities  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-relay-primitives   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-relayer-game       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-support            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+darwinia-treasury           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
+ethereum-primitives         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
 # Polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
