--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -4,7 +4,7 @@ description = "Parachain node runtime primitives"
 edition     = "2018"
 homepage    = "https://darwinia.network/"
 license     = "GPL-3.0"
-name        = "darwinia-pc2-primitives"
+name        = "crab-redirect-primitives"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/parachain/"
 version     = "2.0.0"
