--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -5,50 +5,35 @@ description = "Darwinia Runtime Module Library Runtime"
 edition     = "2018"
 homepage    = "https://darwinia.network/"
 license     = "GPL-3.0"
-name        = "darwinia-pc2-runtime"
+name        = "crab-redirect-runtime"
 readme      = "README.md"
 repository  = "https://github.com/darwinia-network/darwinia-common/"
 version     = "2.0.0"
 
 [dependencies]
-# Crates
+# crates.io
 codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.124", optional = true, features = ["derive"] }
-# Cumulus
+# cumulus
 cumulus-pallet-parachain-system = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-pallet-xcm-handler      = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 cumulus-primitives-core         = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
 parachain-info                  = { default-features = false, git = "https://github.com/paritytech/cumulus", branch = "rococo-v1" }
-# Darwinia
-darwinia-balances           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-democracy          = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-elections-phragmen = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-ethereum-backing   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-ethereum-relay     = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-header-mmr         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-pc2-primitives     = { default-features = false, path = "../primitives" }
-darwinia-relay-authorities  = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-relay-primitives   = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-relayer-game       = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-support            = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-darwinia-treasury           = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-ethereum-primitives         = { default-features = false, git = "https://github.com/darwinia-network/darwinia-common", branch = "rococo-v1-external-substrate" }
-# Polkadot
+# darwinia
+crab-redirect-primitives = { default-features = false, path = "../primitives" }
+# polkadot
 polkadot-parachain = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm                = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm-builder        = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
 xcm-executor       = { default-features = false, git = "https://github.com/paritytech/polkadot", branch = "rococo-v1" }
-# Substrate
+# substrate
 frame-executive                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 frame-support                     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 frame-system                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-pallet-collective                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-pallet-identity                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-pallet-membership                 = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
+pallet-balances                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-multisig                   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-proxy                      = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
-pallet-scheduler                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-sudo                       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-timestamp                  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
 pallet-transaction-payment        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "rococo-v1" }
@@ -77,19 +62,7 @@ std     = [
 	"cumulus-pallet-xcm-handler/std",
 	"cumulus-primitives-core/std",
 	"parachain-info/std",
-	"darwinia-balances/std",
-	"darwinia-democracy/std",
-	"darwinia-elections-phragmen/std",
-	"darwinia-ethereum-backing/std",
-	"darwinia-ethereum-relay/std",
-	"darwinia-header-mmr/std",
-	"darwinia-pc2-primitives/std",
-	"darwinia-relay-authorities/std",
-	"darwinia-relay-primitives/std",
-	"darwinia-relayer-game/std",
-	"darwinia-support/std",
-	"darwinia-treasury/std",
-	"ethereum-primitives/std",
+	"crab-redirect-primitives/std",
 	"polkadot-parachain/std",
 	"xcm/std",
 	"xcm-builder/std",
@@ -97,13 +70,9 @@ std     = [
 	"frame-executive/std",
 	"frame-support/std",
 	"frame-system/std",
-	"pallet-collective/std",
-	"pallet-identity/std",
-	"pallet-membership/std",
-	"pallet-multisig/std",
+	"pallet-balances/std",
 	"pallet-proxy/std",
 	"pallet-randomness-collective-flip/std",
-	"pallet-scheduler/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
 	"pallet-transaction-payment/std",
@@ -120,5 +89,3 @@ std     = [
 	"sp-transaction-pool/std",
 	"sp-version/std",
 ]
-
-crab = []
