companion for #cumulus-391 part.1

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -11,8 +11,8 @@ version     = "2.0.0"
 
 [dependencies]
 # Substrate
-sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate" }
-sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
+sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 
 [features]
 default = ["std"]
