--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,41 +28,41 @@ crab-redirect-primitives = { path = "primitives" }
 crab-redirect-runtime    = { path = "runtime" }
 
 # Substrate dependencies
-sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
-sc-chain-spec       = { git = "https://github.com/paritytech/substrate" }
-sc-cli              = { git = "https://github.com/paritytech/substrate" }
-sc-executor         = { git = "https://github.com/paritytech/substrate" }
-sc-rpc              = { git = "https://github.com/paritytech/substrate" }
-sc-service          = { git = "https://github.com/paritytech/substrate" }
-sc-telemetry        = { git = "https://github.com/paritytech/substrate" }
-sc-tracing          = { git = "https://github.com/paritytech/substrate" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
-sp-block-builder    = { git = "https://github.com/paritytech/substrate" }
-sp-consensus        = { git = "https://github.com/paritytech/substrate" }
-sp-core             = { git = "https://github.com/paritytech/substrate" }
-sp-inherents        = { git = "https://github.com/paritytech/substrate" }
-sp-runtime          = { git = "https://github.com/paritytech/substrate" }
-sp-timestamp        = { git = "https://github.com/paritytech/substrate" }
-sp-trie             = { git = "https://github.com/paritytech/substrate" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-chain-spec       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-cli              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-executor         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-rpc              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-service          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-telemetry        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-tracing          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-block-builder    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-consensus        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-core             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-inherents        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-timestamp        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-trie             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 
 # RPC related dependencies
 jsonrpc-core = { version = "15.1.0" }
 
 # Cumulus dependencies
-cumulus-client-cli                   = { git = "https://github.com/paritytech/cumulus" }
-cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus" }
-cumulus-client-network               = { git = "https://github.com/paritytech/cumulus" }
-cumulus-client-service               = { git = "https://github.com/paritytech/cumulus" }
-cumulus-primitives-core              = { git = "https://github.com/paritytech/cumulus" }
+cumulus-client-cli                   = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-network               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-client-service               = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-primitives-core              = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 
 # Polkadot dependencies
-polkadot-cli        = { git = "https://github.com/paritytech/polkadot" }
-polkadot-parachain  = { git = "https://github.com/paritytech/polkadot" }
-polkadot-primitives = { git = "https://github.com/paritytech/polkadot" }
-polkadot-service    = { git = "https://github.com/paritytech/polkadot" }
+polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
+polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
+polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
+polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/paritytech/substrate" }
+substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 
 [workspace]
 members = [
