--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,10 +39,14 @@ sc-rpc                        = { git = "https://github.com/paritytech/substrate
 sc-service                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sc-telemetry                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sc-tracing                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-offchain                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sc-transaction-pool           = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-api                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-consensus-aura             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-block-builder              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
-sp-consensus                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
+sp-keystore                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-core                       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-inherents                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
 sp-runtime                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.4" }
@@ -59,6 +63,7 @@ cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus
 cumulus-client-network          = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-client-service          = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 cumulus-primitives-core         = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
+cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.4" }
 
 # Polkadot dependencies
 polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.4" }
